<resources>
    <string name="app_name">APIGW Mobile</string>
    <string name="app_title">APIGW Manager</string>

    <string name="app_subtitle">For Android</string>
    <string name="conn_mgr">Connection Manager</string>
    <string name="cert_not_trusted">Certificate Not Trusted</string>
    <string name="add_to_truststore">Add to trusted certificate store?</string>
    <string name="empty_string"></string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="action_add">Add</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_purge">Purge</string>
    <string name="action_enable">Enable</string>
    <string name="action_disable">Disable</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_settings">Settings</string>
    <string name="action_check_cert">Check Trust Status</string>
    <string name="action_view_cert">View Certificate</string>
    <string name="action_remove_trust">Remove Truststore</string>
    <string name="action_start_gateway">Start Gateway</string>
    <string name="action_stop_gateway">Stop Gateway</string>
    <string name="action_gateway_messaging">Messaging</string>
    <string name="action_open_console">Open Console</string>
    <string name="action_ssh_to_host">SSH To Host</string>
    <string name="action_gateway_kps">Browse KPS</string>
    <string name="action_kps_structure">View Structure</string>
    <string name="action_kps_customize_list">Customize List Display</string>
    <string name="action_deployment_details">Deployment Details</string>
    <string name="action_save_deploy_archive">Upload Deployment Archive</string>
    <string name="action_save_policy_archive">Upload Policy Archive</string>
    <string name="action_save_env_archive">Upload Environment Archive</string>
    <string name="action_save_env_settings">Upload Environment Settings</string>
    <string name="action_policy_props">Policy Properties</string>
    <string name="action_env_props">Environment Properties</string>
    <string name="action_cfg_storage">Configure Cloud Storage</string>
    <string name="action_upload">Upload</string>

    <string name="welcome">Welcome!</string>

    <string name="welcome_msg">Welcome to API Gateway Manager for Android!\n\nTo get started, please add a connection to a running Admin Node Manager.</string>

    <string name="add_inst">Add API Gateway Instance</string>

    <string name="confirm">Confirm</string>
    <string name="alert">Error</string>
    <string name="info">FYI</string>
    <string name="warning">Warning</string>
    <string name="touch_to">Touch OK to %1$s \'%2$s\'</string>

    <string name="queues">Queues</string>
    <string name="topics">Topics</string>
    <string name="consumers">Consumers</string>
    <string name="subscribers">Subscribers</string>

    <string name="enabled">Enabled</string>
    <string name="port">Port</string>
    <string name="host">Host</string>
    <string name="hosts">Hosts</string>
    <string name="group">Group</string>
    <string name="groups">Groups</string>
    <string name="service">Service</string>
    <string name="services">Services</string>
    <string name="topo_details">Topology Details</string>
    <string name="nodemgr">Node Manager</string>
    <string name="admin_nodemgr">Admin Node Manager</string>
    <string name="nodemgrs">Node Managers</string>
    <string name="gateways">API Server Instances</string>
    <string name="topology">Topology</string>
    <string name="full_topology">Full Topology</string>
    <string name="name">Name</string>
    <string name="mgmt_port">Management Port</string>
    <string name="svcs_port">Services Port</string>
    <string name="test">Test</string>
    <string name="tags">Tags</string>
    <string name="key">Key</string>
    <string name="value">Value</string>
    <string name="use_ssl">Use SSL?</string>
    <string name="cert_mgmt_options">Certificate Management Options</string>
    <string name="use_system_ca">System</string>    <!-- generated CA cert -->
    <string name="use_user_ca">User</string>    <!--  provided CA cert (P12 required) -->
    <string name="use_external_ca">External</string> <!--  CA cert (you will get a CSR) -->
    <string name="domain_phrase">Domain Passphrase</string>
    <string name="temp_phrase">Temp Passphrase</string>
    <string name="p12_path">Path to P12 file</string>
    <string name="p12_phrase">P12 Passphrase</string>

    <string name="use_system">Use System level settings</string>
    <string name="override_port">Override settings for this port</string>
    <string name="rec_inbound">Record inbound transactions</string>
    <string name="rec_outbound">Record outbound transactions</string>
    <string name="rec_path">Record circuit path</string>
    <string name="rec_trace">Record trace</string>

    <string name="cert_trusted">Certificate Chain Trusted</string>
    <string name="truststore_removed">Trust Store removed</string>
    <string name="confirm_remove_truststore">Touch OK to remove trusted certificate store</string>
    <string name="truststore_notfound">Trust Store not found</string>

    <string name="general_settings">General</string>
    <string name="network_settings">Network</string>

    <string name="open_console1">Open a console before SSHing to a host</string>
    <string name="ssh_cmd">ssh %1$s@%2$s</string>

    <string-array name="signing_algorithms">
        <item>sha1</item>
        <item>sha256</item>
        <item>sha384</item>
        <item>sha512</item>
        <item>md5</item>
    </string-array>

    <string-array name="trace_levels">
        <item>FATAL</item>
        <item>ERROR</item>
        <item>INFO</item>
        <item>DEBUG</item>
        <item>DATA</item>
        <item>From System Settings</item>
    </string-array>

</resources>
