<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    >
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_horizontal_margin"
        >
		<EditText
			android:id="@id/edit_host"
			android:layout_height="wrap_content"
			android:layout_width="0dp"
			android:layout_weight="0.75"
			android:scrollHorizontally="true"
			android:inputType="text"
			android:gravity="fill_horizontal"
			android:hint="@string/host"
			android:textAppearance="?android:attr/textAppearanceMedium"
		/>
		<EditText
			android:id="@id/edit_port"
			android:layout_height="wrap_content"
			android:layout_width="0dp"
			android:layout_weight="0.25"
			android:scrollHorizontally="true"
			android:inputType="number"
			android:gravity="fill_horizontal"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:hint="@string/port"
		/>
	</LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_horizontal_margin">
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
        >
        <CheckBox
            android:id="@id/edit_use_ssl"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/use_ssl"
            android:layout_centerHorizontal="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
        />
        </RelativeLayout>
    </LinearLayout>

    <EditText
        android:id="@id/edit_user"
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        android:scrollHorizontally="true"
        android:inputType="text"
        android:layout_gravity="center"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:hint="@string/username"
        android:textAppearance="?android:attr/textAppearanceMedium"
    />
    <EditText
        android:id="@id/edit_passwd"
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        android:scrollHorizontally="true"
        android:inputType="textPassword"
        android:layout_gravity="center"
        android:hint="@string/password"
        android:textAppearance="?android:attr/textAppearanceMedium"
    />

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_horizontal_margin"
        >

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
        >
        <CheckBox
            android:id="@id/edit_enabled"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/enabled"
            android:layout_centerHorizontal="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
        />
        </RelativeLayout>
    </LinearLayout>
	
</LinearLayout>
