<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingStart="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<!--

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="@dimen/activity_horizontal_margin_small"
        android:paddingBottom="@dimen/activity_horizontal_margin_small"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@android:id/icon1"
            android:layout_width="@dimen/gtw_status_icon_size"
            android:layout_height="@dimen/gtw_status_icon_size"
            android:layout_margin="@dimen/listitem_small_margin"
            android:paddingTop="@dimen/activity_horizontal_margin_small"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/thumbs_up"
            android:layout_gravity="end"
            />
        </LinearLayout>
    -->

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingBottom="@dimen/activity_horizontal_margin_small"
        android:orientation="horizontal">

        <TextView
            android:id="@id/label_name"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:gravity="fill_horizontal"
            android:text="@string/name"
            android:labelFor="@id/edit_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />
        <EditText
            android:id="@id/edit_name"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.8"
            android:scrollHorizontally="true"
            android:inputType="text"
            android:gravity="fill_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_horizontal_margin_small">
        <TextView
            android:id="@id/label_mgmt_port"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:gravity="fill_horizontal"
            android:text="@string/mgmt_port"
            android:labelFor="@id/edit_mgmt_port"
            android:textAppearance="@style/MediumText"
            />
        <EditText
            android:id="@id/edit_mgmt_port"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:scrollHorizontally="true"
            android:inputType="number"
            android:gravity="fill_horizontal"
            android:textAppearance="@style/MediumText"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@id/ctr_svcs_port"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_horizontal_margin_small">
        <TextView
            android:id="@id/label_svcs_port"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:gravity="fill_horizontal"
            android:text="@string/svcs_port"
            android:labelFor="@id/edit_svcs_port"
            android:textAppearance="@style/MediumText"
            />
        <EditText
            android:id="@id/edit_svcs_port"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:scrollHorizontally="true"
            android:inputType="number"
            android:gravity="fill_horizontal"
            android:textAppearance="@style/MediumText"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@id/ctr_host"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/listitem_small_margin">
        <TextView
            android:id="@id/label_host"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:gravity="fill_horizontal"
            android:text="@string/host"
            android:labelFor="@id/edit_host"
            android:paddingTop="@dimen/listitem_small_margin"
            android:textAppearance="@style/MediumText"
            />
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.8"
            android:orientation="vertical"
            >
            <AutoCompleteTextView
                android:id = "@id/edit_host"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textAppearance="@style/MediumText"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:id="@id/ctr_group"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/listitem_small_margin">
        <TextView
            android:id="@id/label_group"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:gravity="fill_horizontal"
            android:text="@string/group"
            android:labelFor="@id/edit_group"
            android:paddingTop="@dimen/listitem_small_margin"
            android:textAppearance="@style/MediumText"
            />
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.8"
            android:orientation="vertical"
            >
            <AutoCompleteTextView
                android:id = "@id/edit_group"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="text"
                android:textAppearance="@style/MediumText"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        >
        <include layout="@layout/ssl_opts"/>
    </LinearLayout>
</LinearLayout>