<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/network_settings">

        <CheckBoxPreference
            android:key="com.axway.apigw.android.wifiOnly"
            android:defaultValue="true"
            android:dialogTitle="Connect only over Wifi"
            android:dialogMessage="Connect only over Wifi?"
            android:title="Connect only over Wifi"
            android:summary=""
            />
    </PreferenceCategory>
<!--
    <PreferenceCategory
        android:title="@string/general_settings">

        <CheckBoxPreference
            android:key="com.axway.apigw.android.gcmRegistered"
            android:defaultValue="false"
            android:title="GCM Registration"
            android:summary=""
            />

    </PreferenceCategory>
-->
    <PreferenceCategory
        android:title="@string/action_gateway_kps">

        <CheckBoxPreference
            android:key="com.axway.apigw.android.showInternalKps"
            android:defaultValue="false"
            android:dialogTitle="Show Internal"
            android:dialogMessage="Show Internal KPS?"
            android:title="Show Internal"
            android:summary=""
            />

        <com.axway.apigw.android.util.IntegerPreference
            android:key="com.axway.apigw.android.batchSize"
            android:defaultValue="0"
            android:dialogTitle="KPS Batch Size"
            android:dialogMessage="Batch Size (0 for no batching)"
            android:title="Batch Size"
            android:dialogLayout="@layout/int_dlg"
            android:summary=""
            />
        <!--
            <EditTextPreference
                android:key="com.axway.apigw.android.googleAcct"
                android:defaultValue=""
                android:dialogTitle="Google Account"
                android:dialogMessage="The Google account to use for Drive operations"
                android:title="Google Account"
                android:summary=""
            />
        -->
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/action_gateway_messaging">

        <CheckBoxPreference
            android:key="com.axway.apigw.android.showAdvisoryTopics"
            android:defaultValue="false"
            android:dialogTitle="Show Advisory Topics"
            android:dialogMessage="Show Advisory Topics?"
            android:title="Show Advisory Topics"
            android:summary=""
            />
    </PreferenceCategory>

    <!--
        <PreferenceCategory
                android:title="@string/general_settings">
            <CheckBoxPreference
                android:key="showNodeMgrs"
                android:title="Show NodeManagers"
                android:summary="Show NodeManagers in the topology view"
            />

            <CheckBoxPreference
                android:key="reloadAfterUpdate"
                android:title="Reload after each update"
                android:summary="Reload the topology after each update"
            />


            <EditTextPreference
                android:key="adminNodeMgrHost"
                android:title="Host/IP where the admin node manager is running"
                android:summary=""
                android:dialogTitle="Admin Node Manager Host" />


            <com.axway.anodemanager.IntegerPreference
                android:key="adminNodeMgrPort"
                android:defaultValue="8090"
                android:dialogTitle="Admin Node Manager Port"
                android:dialogMessage="Port"
                android:title="Port where Admin Node Manager is listening"
                android:summary=""
                android:dialogLayout="@layout/int_dlg"
               />

            <CheckBoxPreference
                    android:key="useSsl"
                    android:title="Use SSL?"
                    android:summary="Use a secure connection to the Admin Node Manager"
                    android:dialogTitle="Use SSL?" />

            <CheckBoxPreference
                    android:key="autoConnect"
                    android:title="Connect at startup?"
                    android:summary="Attempt a connection to the Admin Node Manager at startup"
                    android:dialogTitle="Connect at startup?" />

            <EditTextPreference
                    android:key="interval"
                    android:title="@string/title_srch_ival"
                    android:summary="@string/summary_srch_ival"
                    android:dialogTitle="@string/title_srch_ival" />

            <CheckBoxPreference
                    android:key="showLocation"
                    android:title="Show my location"
                    android:summary="Allows retrieving and displaying my location"
                    android:dialogTitle="Show my location" />

            <CheckBoxPreference
                    android:key="showCompass"
                    android:title="Show compass"
                    android:summary="Allows displaying the compass"
                    android:dialogTitle="Show compass" />

            <CheckBoxPreference
                    android:key="viewAsMap"
                    android:title="View route on map"
                    android:summary="Allows your walk to be displayed on a map"
                    android:dialogTitle="View route on map" />

            <EditTextPreference
                    android:key="maxWalkTime"
                    android:title="Max Walk Time (minutes)"
                    android:summary="Walks will be auto-stopped after this many minutes"
                    android:dialogTitle="Max Walk Time (minutes)"
                    />
        </PreferenceCategory>

        <PreferenceCategory
            android:title="Health Checks">
            <com.axway.apigw.android.util.IntegerPreference
                android:key="com.axway.apigw.android.hcInterval"
                android:defaultValue="60"
                android:dialogTitle="Health Check Interval"
                android:dialogMessage="Interval (in seconds) between health checks on API Gateway instances"
                android:title="Health Check Interval"
                android:summary=""
                android:dialogLayout="@layout/int_dlg"
                />

        </PreferenceCategory>
    -->
</PreferenceScreen>