<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/ctr_ca_opts"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_horizontal_margin_small"
        android:layout_gravity="start"
        android:textAppearance="@style/FragmentTitleTextStyle"
        android:text="SSL Certificate Options"
        />
    <!--
    android:paddingStart="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_vertical_margin"
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:gravity="fill_horizontal"
                    android:text="@string/cert_mgmt_options"
                    android:paddingTop="@dimen/listitem_small_margin"
                    android:paddingBottom="@dimen/listitem_small_margin"
                    android:textAppearance="@style/MediumText"
                    />
    -->
    <RadioGroup
        android:id="@id/ctr_ca_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@id/edit_system_ca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/MediumText"
            android:paddingEnd="@dimen/activity_vertical_margin"
            android:text="@string/use_system_ca"/>

        <RadioButton
            android:id="@id/edit_user_ca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/activity_vertical_margin"
            android:textAppearance="@style/MediumText"
            android:text="@string/use_user_ca"/>

        <RadioButton
            android:id="@id/edit_external_ca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/MediumText"
            android:text="@string/use_external_ca"/>
    </RadioGroup>
    <!--
                android:paddingBottom="@dimen/activity_horizontal_margin"
    -->
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="@dimen/activity_horizontal_margin_small"
        android:orientation="horizontal">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_gravity="center_vertical"
            android:text="Signing Algorithm"
            android:textAppearance="@style/MediumText"
            />
        <Spinner
            android:id="@id/spinner01"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:minHeight="30dp"
            />
    </LinearLayout>


    <!--
        <LinearLayout
            android:id="@id/ctr_domain_phrase"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/listitem_small_margin">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:gravity="fill_horizontal"
                android:text="@string/domain_phrase"
                android:labelFor="@id/edit_domain_phrase"
                android:textAppearance="@style/MediumText"
                />
            <EditText
                android:id="@id/edit_domain_phrase"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:scrollHorizontally="true"
                android:inputType="textPassword"
                android:gravity="fill_horizontal"
                android:textAppearance="@style/MediumText"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@id/ctr_temp_phrase"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/listitem_small_margin">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:gravity="fill_horizontal"
                android:text="@string/temp_phrase"
                android:labelFor="@id/edit_temp_phrase"
                android:textAppearance="@style/MediumText"
                />
            <EditText
                android:id="@id/edit_temp_phrase"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:scrollHorizontally="true"
                android:inputType="textPassword"
                android:gravity="fill_horizontal"
                android:textAppearance="@style/MediumText"
                />
        </LinearLayout>


        <LinearLayout
            android:id="@id/ctr_p12_path"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            >
            <LinearLayout
                android:orientation="horizontal"
                android:paddingBottom="@dimen/listitem_small_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:gravity="fill_horizontal"
                    android:text="@string/p12_path"
                    android:labelFor="@id/edit_p12_path"
                    android:textAppearance="@style/MediumText"
                    />
                <EditText
                    android:id="@id/edit_p12_path"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:scrollHorizontally="true"
                    android:inputType="textPassword"
                    android:gravity="fill_horizontal"
                    android:textAppearance="@style/MediumText"
                    />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:paddingBottom="@dimen/listitem_small_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:gravity="fill_horizontal"
                    android:text="@string/p12_phrase"
                    android:labelFor="@id/edit_p12_phrase"
                    android:textAppearance="@style/MediumText"
                    />
                <EditText
                    android:id="@id/edit_p12_phrase"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:scrollHorizontally="true"
                    android:inputType="textPassword"
                    android:gravity="fill_horizontal"
                    android:textAppearance="@style/MediumText"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_vertical_margin"
            android:paddingEnd="@dimen/activity_vertical_margin"
            >
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@android:id/button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"/>
                <Button
                    android:id="@android:id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"/>
            </FrameLayout>
        </LinearLayout>
    -->

</LinearLayout>